Define specification for required params in url
